<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="dog" type="com.example.claroperro.Dog"/>
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary_background">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="200dp"
            android:scrollbars="none">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/dog_image"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="56dp"
                    android:adjustViewBounds="true"
                    android:elevation="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="182dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/detail_info_background"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">
                    <TextView
                        android:id="@+id/dog_index"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:padding="8dp"
                        android:textColor="@color/text_black"
                        android:textSize="24sp" tools:text="#25"/>
                    <TextView
                        android:id="@+id/dog_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@{dog.name}"
                        android:textColor="@color/text_black"
                        android:textSize="32sp" tools:text="Tiny Poodle"/>
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">
                        <ProgressBar style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="200dp"
                            android:layout_height="6dp"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="16dp"
                            android:background="@drawable/progressbar_background"
                            android:elevation="2dp"
                            android:indeterminate="false"
                            android:max="10"
                            android:progress="10"
                            android:progressTint="@color/color_primary"/>
                        <ImageView
                            android:id="@+id/hearth_icon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="4dp"
                            android:background="@drawable/red_circle"
                            android:elevation="2dp"
                            android:padding="4dp"
                            android:src="@drawable/ic_hearth_white"/>
                    </RelativeLayout>
                    <TextView
                        android:id="@+id/life_expectancy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/text_black"
                        android:textSize="16sp" tools:text="10 - 14 años"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:text="@{dog.wiki}"
                        android:textColor="@color/text_black"
                        android:textSize="16sp" tools:text="https://www.wiki.com/dog"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@color/divider"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/temperament"
                                android:textColor="@color/text_black"/>

                            <TextView
                                android:id="@+id/temperament"
                                style="@style/DetailSectionInfo"
                                android:layout_width="117dp"
                                android:layout_height="56dp"
                                android:layout_marginTop="8dp"
                                android:text="@{dog.temperament}"
                                tools:text="Affectionate, Lively, Friendly, Intelligent" />

                        </LinearLayout>
                        <View
                            android:layout_width="1dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:background="@color/divider"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">
                            <TextView style="@style/DetailSectionName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lifeSpan"/>
                            <TextView style="@style/DetailSectionInfo"
                                android:layout_width="90dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@{dog.lifeSpan}" tools:text="12 - 14"/>
                            <TextView style="@style/DetailSectionName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/intelligence"/>
                            <TextView
                                android:id="@+id/intelligence" style="@style/DetailSectionInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@{Integer.toString(dog.intelligence)}" tools:text="3/5"/>

                        </LinearLayout>
                        <View
                            android:layout_width="1dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:background="@color/divider"/>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/origin"
                                android:textColor="@color/text_black"/>
                            <TextView
                                android:id="@+id/weight" style="@style/DetailSectionInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@{dog.origin}" tools:text="USA"/>
                            <TextView style="@style/DetailSectionName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/countryCode"/>
                            <TextView
                                android:id="@+id/countryCode" style="@style/DetailSectionInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@{dog.countryCode}" tools:text="37 - 40 cm"/>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </ScrollView>
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_margin="24dp"
            android:elevation="4dp"
            android:src="@drawable/ic_check_black"
            android:importantForAccessibility="no" />
        <ProgressBar
            android:id="@+id/loading_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center" android:indeterminate="true" android:indeterminateTint="@color/colorPrimaryDark" android:indeterminateTintMode="src_atop" android:visibility="gone"/>
    </FrameLayout>
</layout>